--- a/zelkBD.theme.css
+++ b/zelkBD.theme.css
@@ -16,11 +16,11 @@
 @import url(https://raw.githubusercontent.com/Onirau/zelkfork/main/SettingsIcons.css);
 /*--------------COLORS---------------*/
 /*------remove / and * to apply------*/
-@import url(https://raw.githubusercontent.com/Onirau/zelkfork/main/colors/blue.css);
+/* @import url(https://raw.githubusercontent.com/Onirau/zelkfork/main/colors/blue.css); */
 /* @import url(https://raw.githack.com/schnensch0/zelk/main/colors/green.css); */
 /* @import url(https://raw.githack.com/schnensch0/zelk/main/colors/gray.css); */
 /* @import url(https://raw.githack.com/schnensch0/zelk/main/colors/orange.css); */
-/* @import url(https://raw.githack.com/schnensch0/zelk/main/colors/purple.css); */
+@import url(https://raw.githack.com/schnensch0/zelk/main/colors/purple.css);
 /* @import url(https://raw.githack.com/schnensch0/zelk/main/colors/red.css); */
 /* @import url(https://raw.githack.com/schnensch0/zelk/main/colors/discord.css); */
 
